--- a/MiRs.Discord.Bot.Interactors/MiRs.Discord.Bot.Interactors.csproj
+++ b/MiRs.Discord.Bot.Interactors/MiRs.Discord.Bot.Interactors.csproj
@@ -10,6 +10,12 @@
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    <PackageReference Include="NetCord" Version="1.0.0-alpha.356" />
+    <PackageReference Include="NetCord.Services" Version="1.0.0-alpha.356" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MiRs.Discord.Bot.Mediator\MiRs.Discord.Bot.Mediator.csproj" />
   </ItemGroup>
 
 </Project>
