creaated admin func

--- a/MiRs.Discord.Bot.API/MiRs.Discord.Bot.API.csproj
+++ b/MiRs.Discord.Bot.API/MiRs.Discord.Bot.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    <PackageReference Include="Flurl" Version="4.0.0" />
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
@@ -24,6 +26,7 @@
     <ProjectReference Include="..\MiRs.Discord.Bot.Domain\MiRs.Discord.Bot.Domain.csproj" />
     <ProjectReference Include="..\MiRs.Discord.Bot.Interactors\MiRs.Discord.Bot.Interactors.csproj" />
     <ProjectReference Include="..\MiRs.Discord.Bot.Mediator\MiRs.Discord.Bot.Mediator.csproj" />
+    <ProjectReference Include="..\MiRs.Discord.Bot.MiRsClient\MiRs.Discord.Bot.MiRsClient.csproj" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
