--- a/MiRs.Discord.Bot.Gateway/MiRs.Discord.Bot.Gateway.csproj
+++ b/MiRs.Discord.Bot.Gateway/MiRs.Discord.Bot.Gateway.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MiRs.Discord.Bot.Domain\MiRs.Discord.Bot.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
