updated modules for events and teams

--- a/src/MiRs.Discord.Bot.Mediator/MiRs.Discord.Bot.Mediator.csproj
+++ b/src/MiRs.Discord.Bot.Mediator/MiRs.Discord.Bot.Mediator.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\MiRs.Discord.Bot.Domain\MiRs.Discord.Bot.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\Runehunter\" />
+  </ItemGroup>
+
 </Project>
