updated login SP creds

--- a/.github/workflows/main_app-mirs-discord-bot.yml
+++ b/.github/workflows/main_app-mirs-discord-bot.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B429929711634C11ADF37C848F54B888 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E3098235D2864A42BB31F997D605D56D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_746AFAC0E3494355B0A1B1406D2681B7 }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
